--- a/package.json
+++ b/package.json
@@ -4,12 +4,6 @@
   "version": "1.63.0-dev",
   "description": "A hackable text editor for the 21st Century.",
   "main": "./src/main-process/main.js",
-  "scripts": {
-    "preinstall": "node -e 'process.exit(0)'",
-    "test": "node script/test",
-    "build": "electron-rebuild",
-    "start": "electron --enable-logging src/main-process/main.js -f"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/atom/atom.git"
@@ -152,7 +146,7 @@
     "season": "^6.0.2",
     "semver": "7.3.2",
     "service-hub": "^0.7.4",
-    "settings-view": "file:packages/settings-view",
+    "settings-view": "https://www.atom.io/api/packages/settings-view/versions/0.261.8/tarball",
     "sinon": "9.2.1",
     "snippets": "https://www.atom.io/api/packages/snippets/versions/1.5.1/tarball",
     "solarized-dark-syntax": "file:packages/solarized-dark-syntax",
@@ -166,7 +160,7 @@
     "temp": "0.9.2",
     "text-buffer": "^13.18.5",
     "timecop": "https://www.atom.io/api/packages/timecop/versions/0.36.2/tarball",
-    "tree-sitter": "0.20.0",
+    "tree-sitter": "^0.20.0",
     "tree-view": "https://www.atom.io/api/packages/tree-view/versions/0.229.1/tarball",
     "typescript-simple": "8.0.6",
     "update-package-dependencies": "file:./packages/update-package-dependencies",
@@ -247,7 +241,7 @@
     "language-html": "0.53.1",
     "language-hyperlink": "0.17.1",
     "language-java": "0.32.1",
-    "language-javascript": "file:packages/language-javascript",
+    "language-javascript": "file:./packages/language-javascript",
     "language-json": "1.0.5",
     "language-less": "0.34.3",
     "language-make": "0.23.0",
@@ -272,6 +266,13 @@
     "language-yaml": "0.32.0"
   },
   "private": true,
+  "scripts": {
+    "preinstall": "node -e 'process.exit(0)'",
+    "test": "node script/test",
+    "build": "electron-rebuild",
+    "build:apm": "cd apm; npm --global-style install",
+    "start": "electron --enable-logging src/main-process/main.js -f"
+  },
   "standard-engine": "./script/node_modules/standard",
   "standard": {
     "env": {
@@ -287,7 +288,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.22.2",
-    "electron": "^12.0.0",
+    "electron": "12.2.3",
     "electron-rebuild": "^3.2.7",
     "playwright": "^1.22.2",
     "playwright-core": "^1.22.2"
