--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "language-go": "https://www.atom.io/api/packages/language-go/versions/0.47.2/tarball",
     "language-html": "https://www.atom.io/api/packages/language-html/versions/0.53.1/tarball",
     "language-hyperlink": "https://www.atom.io/api/packages/language-hyperlink/versions/0.17.1/tarball",
-    "language-java": "https://www.atom.io/api/packages/language-java/versions/0.32.1/tarball",
+    "language-java": "file:packages/language-java",
     "language-javascript": "file:packages/language-javascript",
     "language-json": "https://www.atom.io/api/packages/language-json/versions/1.0.5/tarball",
     "language-less": "https://www.atom.io/api/packages/language-less/versions/0.34.3/tarball",
@@ -101,7 +101,7 @@
     "language-php": "https://www.atom.io/api/packages/language-php/versions/0.48.1/tarball",
     "language-property-list": "https://www.atom.io/api/packages/language-property-list/versions/0.9.1/tarball",
     "language-python": "https://www.atom.io/api/packages/language-python/versions/0.53.6/tarball",
-    "language-ruby": "https://www.atom.io/api/packages/language-ruby/versions/0.73.0/tarball",
+    "language-ruby": "file:packages/language-ruby",
     "language-ruby-on-rails": "https://www.atom.io/api/packages/language-ruby-on-rails/versions/0.25.3/tarball",
     "language-rust-bundled": "file:packages/language-rust-bundled",
     "language-sass": "https://www.atom.io/api/packages/language-sass/versions/0.62.1/tarball",
@@ -240,7 +240,7 @@
     "language-go": "0.47.2",
     "language-html": "0.53.1",
     "language-hyperlink": "0.17.1",
-    "language-java": "0.32.1",
+    "language-java": "file:./packages/language-java",
     "language-javascript": "file:./packages/language-javascript",
     "language-json": "1.0.5",
     "language-less": "0.34.3",
@@ -251,7 +251,7 @@
     "language-php": "0.48.1",
     "language-property-list": "0.9.1",
     "language-python": "0.53.6",
-    "language-ruby": "0.73.0",
+    "language-ruby": "file:./packages/language-ruby",
     "language-ruby-on-rails": "0.25.3",
     "language-rust-bundled": "file:./packages/language-rust-bundled",
     "language-sass": "0.62.1",
