--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
     steps:
       - checkout
       - run: apt-get update
-      - run: DEBIAN_FRONTEND="noninteractive" \
-              apt-get install -y \
+      - run: apt-get install -y \
                   build-essential \
                   git \
                   libsecret-1-dev \
