--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - checkout
       - run: apt-get update
+      - run: export DEBIAN_FRONTEND="noninteractive"
       - run: apt-get install -y \
                   build-essential \
                   git \
