--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,18 +10,18 @@ jobs:
       - checkout
       - run: apt-get update
       - run: export DEBIAN_FRONTEND="noninteractive"
-      - run: apt-get install -y \
-                  build-essential \
-                  git \
-                  libsecret-1-dev \
-                  fakeroot \
-                  libx11-dev \
-                  libxkbfile-dev \
-                  libgdk-pixbuf2.0-dev \
-                  libgtk-3-dev \
-                  libxss-dev \
-                  libasound2-dev \
-                  libnss3 \
+      - run: apt-get install -y
+                  build-essential
+                  git
+                  libsecret-1-dev
+                  fakeroot
+                  libx11-dev
+                  libxkbfile-dev
+                  libgdk-pixbuf2.0-dev
+                  libgtk-3-dev
+                  libxss-dev
+                  libasound2-dev
+                  libnss3
                   xvfb
       - run: yarn install || yarn install || yarn install ||  yarn install
       - run: yarn run build
