--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,8 @@ jobs:
       - run: yarn install || yarn install || yarn install ||  yarn install
       - run: yarn run build
       - run: yarn run build:apm
+      - run: export DISPLAY=:99
+      - run: nohup Xvfb :99 &
       - run: npx playwright test
 
 workflows:
