--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,7 @@ jobs:
       - run: yarn install || yarn install || yarn install ||  yarn install
       - run: yarn run build
       - run: yarn run build:apm
-      - run: export DISPLAY=:99
-      - run: nohup Xvfb :99 &
-      - run: npx playwright test
+      - run: Xvfb :99 & DISPLAY=:99 npx playwright test
       - run: mkdir /tmp/videos && cp *mp4 /tmp/videos
       - store_artifacts:
           path: /tmp/videos
