--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,9 @@ jobs:
       - run: yarn install || sleep 1 && yarn install || sleep 2 && yarn install ||  sleep 10 && yarn install
       - run: yarn run build
       - run: yarn run build:apm
-      - run: Xvfb :99 & DISPLAY=:99 npx playwright test
+      - run: Xvfb :99 & DISPLAY=:99 npx playwright test --reporter=junit > /tmp/report.xml
+      - store_test_results:
+          path: /tmp/report.xml
       - store_artifacts:
           path: ./tests/videos
 
