--- a/package.json
+++ b/package.json
@@ -80,27 +80,27 @@
     "jasmine-tagged": "^1.1.4",
     "key-path-helpers": "^0.4.0",
     "keybinding-resolver": "https://www.atom.io/api/packages/keybinding-resolver/versions/0.39.1/tarball",
-    "language-c": "https://www.atom.io/api/packages/language-c/versions/0.60.19/tarball",
+    "language-c": "file:packages/language-c",
     "language-clojure": "https://www.atom.io/api/packages/language-clojure/versions/0.22.8/tarball",
     "language-coffee-script": "https://www.atom.io/api/packages/language-coffee-script/versions/0.50.0/tarball",
     "language-csharp": "https://www.atom.io/api/packages/language-csharp/versions/1.1.0/tarball",
     "language-css": "https://www.atom.io/api/packages/language-css/versions/0.45.1/tarball",
     "language-gfm": "https://www.atom.io/api/packages/language-gfm/versions/0.90.8/tarball",
     "language-git": "https://www.atom.io/api/packages/language-git/versions/0.19.1/tarball",
-    "language-go": "https://www.atom.io/api/packages/language-go/versions/0.47.2/tarball",
+    "language-go": "file:packages/language-go",
     "language-html": "https://www.atom.io/api/packages/language-html/versions/0.53.1/tarball",
     "language-hyperlink": "https://www.atom.io/api/packages/language-hyperlink/versions/0.17.1/tarball",
     "language-java": "file:packages/language-java",
     "language-javascript": "file:packages/language-javascript",
-    "language-json": "https://www.atom.io/api/packages/language-json/versions/1.0.5/tarball",
+    "language-json": "file:packages/language-json",
     "language-less": "https://www.atom.io/api/packages/language-less/versions/0.34.3/tarball",
     "language-make": "https://www.atom.io/api/packages/language-make/versions/0.23.0/tarball",
     "language-mustache": "https://www.atom.io/api/packages/language-mustache/versions/0.14.5/tarball",
     "language-objective-c": "https://www.atom.io/api/packages/language-objective-c/versions/0.16.0/tarball",
     "language-perl": "https://www.atom.io/api/packages/language-perl/versions/0.38.1/tarball",
-    "language-php": "https://www.atom.io/api/packages/language-php/versions/0.48.1/tarball",
+    "language-php": "file:packages/language-php",
     "language-property-list": "https://www.atom.io/api/packages/language-property-list/versions/0.9.1/tarball",
-    "language-python": "https://www.atom.io/api/packages/language-python/versions/0.53.6/tarball",
+    "language-python": "file:packages/language-python",
     "language-ruby": "file:packages/language-ruby",
     "language-ruby-on-rails": "https://www.atom.io/api/packages/language-ruby-on-rails/versions/0.25.3/tarball",
     "language-rust-bundled": "file:packages/language-rust-bundled",
@@ -230,27 +230,27 @@
     "welcome": "file:./packages/welcome",
     "whitespace": "0.37.8",
     "wrap-guide": "0.41.0",
-    "language-c": "0.60.19",
+    "language-c": "file:./packages/language-c",
     "language-clojure": "0.22.8",
     "language-coffee-script": "0.50.0",
     "language-csharp": "1.1.0",
     "language-css": "0.45.1",
     "language-gfm": "0.90.8",
     "language-git": "0.19.1",
-    "language-go": "0.47.2",
+    "language-go": "file:./packages/language-go",
     "language-html": "0.53.1",
     "language-hyperlink": "0.17.1",
     "language-java": "file:./packages/language-java",
     "language-javascript": "file:./packages/language-javascript",
-    "language-json": "1.0.5",
+    "language-json": "file:./packages/language-json",
     "language-less": "0.34.3",
     "language-make": "0.23.0",
     "language-mustache": "0.14.5",
     "language-objective-c": "0.16.0",
     "language-perl": "0.38.1",
-    "language-php": "0.48.1",
+    "language-php": "file:./packages/language-php",
     "language-property-list": "0.9.1",
-    "language-python": "0.53.6",
+    "language-python": "file:./packages/language-python",
     "language-ruby": "file:./packages/language-ruby",
     "language-ruby-on-rails": "0.25.3",
     "language-rust-bundled": "file:./packages/language-rust-bundled",
