--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "language-gfm": "https://www.atom.io/api/packages/language-gfm/versions/0.90.8/tarball",
     "language-git": "https://www.atom.io/api/packages/language-git/versions/0.19.1/tarball",
     "language-go": "file:packages/language-go",
-    "language-html": "https://www.atom.io/api/packages/language-html/versions/0.53.1/tarball",
+    "language-html": "file:packages/language-html",
     "language-hyperlink": "https://www.atom.io/api/packages/language-hyperlink/versions/0.17.1/tarball",
     "language-java": "file:packages/language-java",
     "language-javascript": "file:packages/language-javascript",
@@ -238,7 +238,7 @@
     "language-gfm": "0.90.8",
     "language-git": "0.19.1",
     "language-go": "file:./packages/language-go",
-    "language-html": "0.53.1",
+    "language-html": "file:./packages/language-html",
     "language-hyperlink": "0.17.1",
     "language-java": "file:./packages/language-java",
     "language-javascript": "file:./packages/language-javascript",
