Fixing yarn start

--- a/package.json
+++ b/package.json
@@ -271,7 +271,7 @@
     "test": "node script/test",
     "build": "electron-rebuild",
     "build:apm": "cd apm; yarn install; ./node_modules/atom-package-manager/bin/npm rebuild",
-    "start": "electron --enable-logging src/main-process/main.js -f"
+    "start": "electron --enable-logging . -f"
   },
   "standard-engine": "./script/node_modules/standard",
   "standard": {
