--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,6 @@ jobs:
       - run: 'yarn dist'
       - store_artifacts:
           path: ./binaries
-          prefix: releases
 
   mac:
     macos:
@@ -58,11 +57,12 @@ jobs:
       - run: 'yarn dist'
       - store_artifacts:
           path: ./binaries
-          prefix: releases
 
   windows:
     machine:
-      image: windows-default
+      image: windows-server-2019:stable
+      resource_class: windows.medium
+      shell: powershell.exe -ExecutionPolicy Bypass
     resource_class: windows.medium
     steps:
       - checkout
@@ -79,7 +79,6 @@ jobs:
       - run: 'yarn dist'
       - store_artifacts:
           path: ./binaries
-          prefix: releases
 
 workflows:
   version: 2
