--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
 version: 2.1
+orbs:
+  win: circleci/windows@2.2.0 # The Windows orb give you everything you need to start using the Windows executor.
+
 defaults: &defaults
   docker:
     - image: node:lts-slim
@@ -59,10 +62,7 @@ jobs:
           path: ./binaries
 
   windows:
-    machine:
-      image: windows-server-2019:stable
-      resource_class: windows.medium
-      shell: powershell.exe -ExecutionPolicy Bypass
+    executor: win/default
     resource_class: windows.medium
     steps:
       - checkout
