--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,9 @@ jobs:
     executor: win/default
     steps:
       - checkout
-      - run: bash -c 'yarn install || yarn install || yarn install || yarn install || yarn install || yarn install'
+      - run:
+          command: yarn install || sleep 1 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install
+          shell: bash.exe
       - run: yarn run build
       - run: yarn run build:apm
       - run: PLAYWRIGHT_JUNIT_OUTPUT_NAME=/tmp/report.xml npx playwright test --reporter=junit,list
