--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,32 +1,32 @@
 container:
   image: node:lts-slim
-task:
-  script:
-    - apt-get update
-    - export DEBIAN_FRONTEND="noninteractive"
-    - apt-get install -y
-                rpm
-                build-essential
-                git
-                libsecret-1-dev
-                fakeroot
-                libx11-dev
-                libxkbfile-dev
-                libgdk-pixbuf2.0-dev
-                libgtk-3-dev
-                libxss-dev
-                libasound2-dev
-                libnss3
-                xvfb
-    - yarn install || sleep 1 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install
-    - yarn run build
-    - yarn run build:apm
-    - Xvfb :99 & DISPLAY=:99 PLAYWRIGHT_JUNIT_OUTPUT_NAME=/tmp/report.xml npx playwright test --reporter=junit,list
+  task:
+    script:
+      - apt-get update
+      - export DEBIAN_FRONTEND="noninteractive"
+      - apt-get install -y
+                  rpm
+                  build-essential
+                  git
+                  libsecret-1-dev
+                  fakeroot
+                  libx11-dev
+                  libxkbfile-dev
+                  libgdk-pixbuf2.0-dev
+                  libgtk-3-dev
+                  libxss-dev
+                  libasound2-dev
+                  libnss3
+                  xvfb
+      - yarn install || sleep 1 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install
+      - yarn run build
+      - yarn run build:apm
+      - Xvfb :99 & DISPLAY=:99 PLAYWRIGHT_JUNIT_OUTPUT_NAME=report.xml npx playwright test --reporter=junit,list
 
-  junit_artifacts:
-    path: /tmp/report.xml
-    type: text/xml
-    format: junit
+    junit_artifacts:
+      path: report.xml
+      type: text/xml
+      format: junit
 
-  videos_artifacts:
-    path: ./tests/videos
+    videos_artifacts:
+      path: ./tests/videos
