--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -36,7 +36,7 @@ mac_task:
   macos_instance:
     image: ghcr.io/cirruslabs/macos-monterey-base:latest
   test_script:
-    - brew install nodejs git
+    - brew install nodejs yarn npx git
     - yarn install || sleep 1 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install
     - yarn run build
     - yarn run build:apm
@@ -57,7 +57,7 @@ windows_task:
   env:
     CIRRUS_SHELL: bash
   test_script:
-    - choco install nodejs git -y
+    - choco install nodejs yarn npx git -y
     - npx yarn install || sleep 1 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install
     - npx yarn run build
     - npx yarn run build:apm
