--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -27,10 +27,10 @@ linux_task:
     type: text/xml
     format: junit
   videos_artifacts:
-    path: ./tests/videos
+    path: ./tests/videos/*
   build_binary_script: yarn dist
   binary_artifacts:
-    path: ./binaries
+    path: ./binaries/*
 
 mac_task:
   macos_instance:
@@ -47,10 +47,10 @@ mac_task:
     type: text/xml
     format: junit
   videos_artifacts:
-    path: ./tests/videos
+    path: ./tests/videos/*
   build_binary_script: yarn dist
   binary_artifacts:
-    path: ./binaries
+    path: ./binaries/*
 
 windows_task:
   windows_container:
@@ -70,7 +70,7 @@ windows_task:
     type: text/xml
     format: junit
   videos_artifacts:
-    path: ./tests/videos
+    path: ./tests/videos/*
   build_binary_script: npx yarn dist
   binary_artifacts:
-    path: ./binaries
+    path: ./binaries/*
