--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -37,7 +37,7 @@ mac_task:
     image: ghcr.io/cirruslabs/macos-monterey-base:latest
   test_script:
     - brew install node@16 yarn git python
-    - export PATH="/opt/homebrew/opt/node@16/bin:$PATH"
+    - export PATH="/opt/homebrew/bin:/opt/homebrew/opt/node@16/bin:$PATH"
     - yarn install || sleep 1 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install
     - yarn run build
     - yarn run build:apm
@@ -56,7 +56,7 @@ windows_task:
   windows_container:
     image: cirrusci/windowsservercore:2019
   env:
-    CIRRUS_SHELL: bash
+    CIRRUS_SHELL: powershell
   test_script:
     - choco install nodejs --version=16.15.1 -y
     - cat C:/ProgramData/chocolatey/\logs/chocolatey.log
