--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -59,9 +59,9 @@ windows_task:
     CIRRUS_SHELL: powershell
   test_script:
     - choco install nodejs --version=16.15.1 -y
-    - cat C:/ProgramData/chocolatey/\logs/chocolatey.log
+    - cat C:/ProgramData/chocolatey/logs/chocolatey.log
     - refreshenv
-    - echo -e $PATH
+    - echo $PATH
   actual_test_script:
     - choco install yarn git python -y
     - npx yarn install || sleep 1 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install
