Setting dirs manually

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -60,10 +60,14 @@ windows_task:
     image: cirrusci/windowsservercore:2019
   env:
     CIRRUS_SHELL: bash
-  install_dependencies_script:
-    - choco install nodejs --version=16.15.1 -y
-    - choco install yarn git python -y
   test_script:
+    - choco install nodejs --version=16.15.1 -y --install-directory='C:\Programs\node'
+    - choco install python -y --install-directory='C:\Programs\python'
+    - choco install git -y --install-directory='C:\Programs\git'
+    - ls C:/Programas/node/bin
+    - ls C:/Programs/python
+    - ls C:/Programas/git
+    - export PATH="C:/Programas/node/bin:C:/Programs/python:C:/Programas/git:$PATH"
     - npx yarn install || sleep 1 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install
     - npx yarn run build
     - npx yarn run build:apm
@@ -74,6 +78,8 @@ windows_task:
     format: junit
   videos_artifacts:
     path: ./tests/videos/**
-  build_binary_script: npx yarn dist
+  build_binary_script:
+    - export PATH="C:/Programas/node/bin:C:/Programs/python:C:/Programas/git:$PATH"
+    - npx yarn dist
   binary_artifacts:
     path: ./binaries/*
