--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -73,9 +73,12 @@ windows_task:
   test_script:
     - choco install nodejs --version=16.15.1 -y
     - choco install python git -y
-    - ls C:/Program\ Files/
-    - ls C:/Program\ Files/*
+    - echo $PATH
+    - echo $path
     - export PATH="C:/Program\ Files/Git/bin:C:/Program\ Files/nodejs:C:/Python310:C:/Python310/bin:$PATH"
+    - export path="C:/Program\ Files/Git/bin:C:/Program\ Files/nodejs:C:/Python310:C:/Python310/bin:$path"
+    - echo $PATH
+    - echo $path
     - npx yarn install || sleep 1 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn install
     - npx yarn run build
     - npx yarn run build:apm
