--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -58,10 +58,10 @@ mac_task:
     - export PATH="/usr/local/bin:$PATH"
     - arch -x86_64 brew install node@16 yarn git python
     - ln -s /usr/local/opt/python3 /usr/local/bin/python
-    - export PATH="/usr/local/bin/python3:$PATH"
-    - arch -x86_64 npx yarn run build
-    - arch -x86_64 npx yarn run build:apm
-    - arch -x86_64 npx yarn dist
+    - export PATH="/usr/local/opt/node@16/bin:/usr/local/bin/python3:$PATH"
+    - arch -x86_64 yarn run build
+    - arch -x86_64 yarn run build:apm
+    - arch -x86_64 yarn dist
   binary_artifacts:
     path: ./binaries/*
 
@@ -77,7 +77,7 @@ windows_task:
     - (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install)
     - npx yarn run build
     - npx yarn run build:apm
-    - Xvfb :99 & DISPLAY=:99 PLAYWRIGHT_JUNIT_OUTPUT_NAME=report.xml npx playwright test --reporter=junit,list
+    - PLAYWRIGHT_JUNIT_OUTPUT_NAME=report.xml npx playwright test --reporter=junit,list
   junit_artifacts:
     path: report.xml
     type: text/xml
