--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -70,10 +70,13 @@ windows_task:
     image: cirrusci/windowsservercore:2019
   env:
     CIRRUS_SHELL: powershell
-  test_script:
+  build_script:
     - choco install nodejs --version=16.15.1 -y
     - choco install python git -y
     - refreshenv
+  test_script:
+    - refreshenv # Just to be safe...
+    - node --version
     - (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install)
     - npx yarn run build
     - npx yarn run build:apm
