Fixing mac, probably, and maybe windows

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -56,6 +56,8 @@ mac_task:
   binary_artifacts:
     path: ./binaries/*
   build_x86_binary_script:
+    - sudo rm -rf /Library/Developer/CommandLineTools
+    - arch -x86_64 xcode-select --install
     - arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
     - export PATH="/usr/local/bin:$PATH"
     - arch -x86_64 brew install node@16 yarn git python
@@ -76,9 +78,9 @@ windows_task:
     - choco install nodejs --version=16.15.1 -y
     - choco install python git -y
     - echo $env:path
-    - $env:path += 'C:\Python310\Scripts\;C:\Python310\;C:\Program Files\nodejs;C:\Program Files\Git\bin'
+    - $env:path += ';C:\Program Files\Microsoft SQL Server\150\Tools\Binn\;C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\170\Tools\Binn\;C:\Program Files\dotnet\;C:\Python310\Scripts\;C:\Python310\;C:\Program Files\nodejs;C:\Program Files\Git\bin'
+    - npm install --g --production windows-build-tools
     - echo $env:path
-    - node --version
     - (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install)
     - npx yarn run build
     - npx yarn run build:apm
