--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -56,8 +56,6 @@ mac_task:
   binary_artifacts:
     path: ./binaries/*
   build_x86_binary_script:
-    - sudo rm -rf /Library/Developer/CommandLineTools
-    - arch -x86_64 xcode-select --install
     - arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
     - export PATH="/usr/local/bin:$PATH"
     - arch -x86_64 brew install node@16 yarn git python
@@ -65,6 +63,8 @@ mac_task:
     - export PATH="/usr/local/opt/node@16/bin:/usr/local/bin/python3:$PATH"
     - arch -x86_64 yarn run build
     - arch -x86_64 yarn run build:apm
+    - sudo rm -rf /Library/Developer/CommandLineTools
+    - arch -x86_64 xcode-select --install
     - arch -x86_64 yarn dist
   binary_artifacts:
     path: ./binaries/*
@@ -77,10 +77,7 @@ windows_task:
   test_script:
     - choco install nodejs --version=16.15.1 -y
     - choco install python git -y
-    - echo $env:path
-    - $env:path += ';C:\Program Files\Microsoft SQL Server\150\Tools\Binn\;C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\170\Tools\Binn\;C:\Program Files\dotnet\;C:\Python310\Scripts\;C:\Python310\;C:\Program Files\nodejs;C:\Program Files\Git\bin'
-    - npm install --g --production windows-build-tools
-    - echo $env:path
+    - $env:path = "C:\Python310\Scripts\;C:\Python310\;$env:path;C:\Program Files\nodejs\;C:\Program Files\Git\cmd;C:\Users\User\AppData\Local\Microsoft\WindowsApps;C:\Users\User\AppData\Roaming\npm"
     - (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install)
     - npx yarn run build
     - npx yarn run build:apm
